<resources>
    <string name="app_name">虚拟纪元</string>
    <string name="slogan">用梦想，实现梦想</string>
    <string name="app_jump">跳转</string>
    <string name="app_mining">挖矿</string>
    <string name="app_my">我的</string>
    <string name="app_app">矿石应用</string>
    <string name="search">搜索应用</string>
    <string name="app_search">搜索</string>
    <string name="app_home">首页</string>
    <string name="login">登录</string>
    <string name="app_introduce">踏足梦想的地方</string>
    <string name="app_account">账号</string>
    <string name="app_pass">密码</string>
    <string name="app_forgot_password">忘记密码?</string>
    <string name="app_join">加入我们!</string>
    <string name="register">注册</string>
    <string name="toast_login">请输入账号或密码</string>
    <string name="app_get_verify">获取验证码</string>
    <string name="app_phone">手机号码</string>
    <string name="app_verify">验证码</string>
    <string name="app_ok_pass">确认密码</string>
    <string name="app_ok_user_login">以有账号登录</string>
    <string name="toast_phone_null">手机号码不能为空</string>
    <string name="app_null">null</string>
    <string name="app_usdt_log">USDT记录</string>
    <string name="app_information">资料</string>
    <string name="app_back_login">退出登录</string>
    <string name="app_modify_name">修改昵称</string>
    <string name="app_sava">保存</string>
    <string name="app_transaction_order">交易订单</string>
    <string name="app_buy_gem">购买 宝石</string>
    <string name="app_sell_gem">卖出 宝石</string>
    <string name="app_set">设置</string>
    <string name="app_residue">挖矿剩余%s次</string>
    <string name="app_miner">矿工：%s</string>
    <string name="app_burial">冷却：%s</string>
    <string name="app_miner_usdt">%s USDT/个旷工</string>
    <string name="app_invite">邀请好友</string>
    <string name="app_commission">手续费 %s</string>
    <string name="app_balance">余额 %s</string>
    <string name="app_accumulate">累计 %s</string>
    <string name="app_diggable">可挖矿(%s次)</string>
    <string name="app_available_usdt">可用USDT：%s</string>
    <string name="app_day_gem">%s/天</string>
    <string name="app_day_gem_order">%s/次</string>
    <string name="app_mining_lv">矿洞等级Lv.%s</string>
    <string name="app_s_usdt_5">%s USDT/升级(挖矿5次,可自动挖矿)</string>
    <string name="app_game">游戏</string>
    <string name="app_turn_off_sideslip">关闭侧滑</string>
    <string name="app_usdt">USDT</string>
    <string name="app_sweep">扫一扫</string>
    <string name="app_logout">注销账号</string>
    <string name="app_Logout_rules">注销规则和明细</string>
    <string name="Introduction_to_Logout">注销将清空该账号的全部有关数据，无法找回!\n删除以下基本数据说明:\n1.删除矿池,USDT,宝石等...</string>
    <string name="logout">注销</string>
    <string name="concerning">关于</string>
    <string name="version_s">Version %s</string>
    <string name="unit_price">单价</string>
    <string name="usdt">USDT</string>
    <string name="number_of_gems">限购宝石数量:</string>
    <string name="game">宝石</string>
    <string name="all">全部</string>
    <string name="available_balance">可用余额:</string>
    <string name="Estimated_consumption">预计消耗:</string>
    <string name="pay_type">支付方式</string>
    <string name="usdt_pay">USDT支付</string>
    <string name="Business_information">商家信息</string>
    <string name="Merchant_nickname">商家昵称</string>
    <string name="Buy_gems">买入宝石</string>
    <string name="Real_name_verification">实名验证</string>
    <string name="app_name_">姓名</string>
    <string name="identity_card">身份证</string>
    <string name="Withdrawal_review">提现审核</string>
    <string name="All_withdrawal_records">全部提现记录</string>
    <string name="Forgot_password">忘记密码</string>
    <string name="New_passwords">新密码</string>
    <string name="app_ok">确认</string>
    <string name="help">帮助</string>
    <string name="Invite_users">邀请用户</string>
    <string name="n1_3_n5_5_n_n_1_25_2_7_3_5_4_3_5_1">升级永久矿池才可获得宝石分红\n1级永久矿池可获得3代分红\n5级永久矿池可获得5代分红\n分红规则介绍:\n分红百分率则是:1代25%,2代7%,3代5%,4代3%,5代1%</string>
    <string name="piece">个</string>
    <string name="_0">0</string>
    <string name="Earn_gems_together">共获取宝石</string>
    <string name="Share_to">分享至</string>
    <string name="WeChat_friends">微信好友</string>
    <string name="WeChat_Moments">微信朋友圈</string>
    <string name="Save_the_image">储存图片</string>
    <string name="Bind_the_invitation_code">绑定邀请码</string>
    <string name="invitation_code">填写邀请码</string>
    <string name="Please_enter_the_account_number">请输入邀请人账号</string>
    <string name="bind">绑定</string>
    <string name="Sign_up_for_an_account">注册账号</string>
    <string name="mining_pool">矿池规则介绍</string>
    <string name="app_nick">昵称</string>
    <string name="System_notifications">系统通知</string>
    <string name="announcement_is_detailed">公告详细</string>
    <string name="Pending_order_management">挂单管理</string>
    <string name="Merchant_settled">商家入驻</string>
    <string name="Introduction_to_the_entry_rules">入驻规则介绍：</string>
    <string name="_1_100u_n2_n3">1.入驻需要质押100U\n2.入驻以后会获得挂单权限，即可挂回收和出售的订单\n3.在没有挂单情况下，即可退出入驻，返回质押金到账号</string>
    <string name="The_amount_staked">质押金额：0</string>
    <string name="Settled">入驻</string>
    <string name="Exit_the_occupancy">退出入驻</string>
    <string name="Recent_game_records">最近游戏记录</string>
    <string name="search_game">搜索游戏</string>
    <string name="Cancel">取消</string>
    <string name="recharge">充值</string>
    <string name="recharge_usdt">充值金额(USDT)</string>
    <string name="_0_00000000">0.00000000</string>
    <string name="n1_n2_n3_1usdt_0_00000001_1_00000001usdt_n4_www_okx_com">温馨提示:\n1.建议使用欧易内部转账(免手续费)\n2.如果充值未到账请联系客服进行处理\n3.如果线路以满，更换金额金额即可如：1USDT+0.00000001=1.00000001USDT以此类推\n4.欧易下载地址:www.okx.com</string>
    <string name="Top_up_information">充值信息</string>
    <string name="USDT_Deposit">充币USDT：</string>
    <string name="Timeout">超时：</string>
    <string name="second">/秒</string>
    <string name="uid">欧易UID：</string>
    <string name="Deposit_network">充币网络：</string>
    <string name="usdt_optimism">USDT-Optimism</string>
    <string name="Deposit_address">充币地址：</string>
    <string name="_0x00">0x00</string>
    <string name="Deposit_status">充币状态：</string>
    <string name="Wait_for_the_deposit_to_arrive">等待充币到账</string>
    <string name="n1_n">温馨提示\n1.不管你用什么方式充币(转账),只要在规定时间内充币上面金额，即可到账\n.请在规定时间充值,充值未到账请联系客服</string>
    <string name="Recharge_history">充值记录</string>
    <string name="Introduction_to_the_rules">规则介绍</string>
    <string name="_0_00">0.00</string>
    <string name="The_number_of_recoverable_gems_remaining">剩余可回收宝石数量:</string>
    <string name="Gems_available">可用宝石:</string>
    <string name="Expected_to_obtain">预计获得:</string>
    <string name="Payout_Methods">收款方式</string>
    <string name="sell_game">售出宝石</string>
    <string name="sell_usdt">售出 USDT</string>
    <string name="set_pass">设置密码</string>
    <string name="pay_pass">原支付密码</string>
    <string name="new_pay_pass">新支付密码</string>
    <string name="Change_your_password">修改密码</string>
    <string name="n1">温馨提示\n1.请先确认信息在进行转账,否则造成没必要的损失</string>
    <string name="Transfer">转账</string>
    <string name="Query_information">查询信息</string>
    <string name="Enter_the_amount_to_be_transferred">USDT数量</string>
    <string name="Account">账号</string>
    <string name="id">ID:</string>
    <string name="my_usdt">我的USDT</string>
    <string name="Current_balance">当前余额</string>
    <string name="Payouts">提现</string>
    <string name="my_wallet">我的钱包</string>
    <string name="My_USDT_balance">USDT余额</string>
    <string name="Gem_balance">宝石余额</string>
    <string name="OKX_email_mobile_phone">欧易邮箱、手机</string>
    <string name="Withdrawal_Amount_USDT">提现金额(USDT)</string>
    <string name="Available_in_USDT">可用USDT:</string>
    <string name="n1_n2_n3_n4_www_okx_com">温馨提示:\n1.本提现只支持欧易内部转账\n2.如果提现失败请联系客服进行处理\n3.请输入欧易邮箱或者手机号码\n4.欧易下载地址:www.okx.com</string>
    <string name="Withdrawal_history">提现记录</string>
    <string name="size">数量</string>
    <string name="buy">购买</string>
    <string name="Payout_information">提现信息</string>
    <string name="Withdraw_USDT">提现USDT：</string>
    <string name="Withdrawal_address">提现地址：</string>
    <string name="Reasons_for_refusing_to_withdraw">拒绝提现理由</string>
    <string name="no">拒绝</string>
    <string name="yes">通过</string>
    <string name="yes_1">通过(自动打款)</string>
    <string name="Tips">温馨提示</string>
    <string name="usdt_xxxx">自动打款请确保该地址添加到USDT通讯录，并且打开右上角设置,打开地址白名单模式</string>
    <string name="Technical_personnel">技术人员</string>
    <string name="wx">微信号：</string>
    <string name="introduce">介绍:</string>
    <string name="bug">负责解决各种各样的软件问题，和BUG处理，和建议!</string>
    <string name="WeChat_QR_code">微信二维码:</string>
    <string name="Qr_code">二维码</string>
    <string name="Gem_Pool">宝石矿池</string>
    <string name="Detailed_explanation_of_the_rules">规则详解</string>
    <string name="_0_day">距离过期:0/天</string>
    <string name="Cumulative">累计 %s</string>
    <string name="Validity_period_of_the_mining_pool">矿池有效期: %s</string>
    <string name="lv_0">矿洞等级Lv.0</string>
    <string name="_0_day_1">0/天</string>
    <string name="Mining">挖矿中…</string>
    <string name="Mining_0">挖矿(0)</string>
    <string name="_0_game_buy">(0)宝石购买</string>
    <string name="Taken_off_the_shelves">下架</string>
    <string name="The_top_up_expires">充值过期</string>
    <string name="_1">+1</string>
    <string name="yes_ok">以完成</string>
    <string name="day">第一天</string>
    <string name="_0_1">0.1宝石</string>
    <string name="_0_00_money">￥0.00</string>
    <string name="_1_1">-1</string>
    <string name="Pending_orders">挂单</string>
    <string name="Recycle_gems">回收宝石</string>
    <string name="Recommended_unit_price">推荐单价:</string>
    <string name="hello">hello</string>
    <string name="day_5">今日:</string>
    <string name="Gemstone_market">宝石市场</string>
    <string name="Total_gemstone_assets">宝石总资产</string>
    <string name="Total_mining_earnings_today">今日挖矿总收益</string>
    <string name="gem_game">宝石游戏</string>
    <string name="Gemstone_trading">宝石交易</string>
    <string name="Total_USDT_assets">USDT总资产</string>
    <string name="trade">交易</string>
    <string name="apdpdkdd">邀请好友可以获得分红</string>
    <string name="detailed">详细</string>
    <string name="earn_gems_together">共获取宝石</string>
    <string name="Invite_total_users">邀请总用户</string>
    <string name="Commonly_used_functions">常用功能</string>
    <string name="Do_tasks_rewards">做任务获得奖励</string>
    <string name="Consecutive_gems">连续签到奖励宝石</string>
    <string name="Sign_gems">签到领宝石</string>
    <string name="Basic_tasks">基础任务</string>
    <string name="news">消息</string>
    <string name="more">更多</string>
    <string name="game_log">最新游戏记录</string>
    <string name="PaymentCode">二维码收款码</string>
    <string name="Save">保存收款码</string>
    <string name="sava">保存</string>
    <string name="Set_the_amount">设置金额</string>
    <string name="copy_url">复制链接</string>
    <string name="web_yes">浏览器打开</string>
    <string name="select_image">选择本地图片</string>
    <string name="usdt_market">USDT市场</string>
    <string name="transaction">交易</string>
    <string name="Registration">挂单</string>
    <string name="app_PaymentSet">收款设置</string>
    <string name="Payment_code">收款码</string>
    <string name="wx_pay_user">微信收款账号</string>
    <string name="zfb_pay_user">支付宝收款账号</string>
    <string name="bank_code">银行卡账号</string>
    <string name="app_bans">建设银行</string>
    <string name="rmb">RMB</string>
    <string name="bank">银行卡</string>
    <string name="Order_No">订单号</string>
    <string name="bug_gem">购买 宝石</string>
    <string name="Done">已完成</string>
    <string name="time">2023-10-23 10:23</string>
    <string name="susdt">%sUSDT</string>
    <string name="price">价格</string>
    <string name="TransactionCompleted">交易已完成</string>
    <string name="account_balance">成功以后金额已转入该账号余额</string>
    <string name="moneys">￥%s</string>
    <string name="_0_00_gem">%s 宝石</string>
    <string name="amount">金额</string>
    <string name="s_usdt">%s USDT</string>
    <string name="commission">手续费</string>
    <string name="business_nick">商家昵称</string>
    <string name="Order_Time">下单时间</string>
</resources>