<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/news"
        android:icon="@mipmap/news"
        android:title="@string/news"
        app:actionProviderClass="com.mining.mining.widget.BadgeActionProvider"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@mipmap/more"
        android:title="@string/more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/Sweep"
                android:title="@string/app_sweep" />
            <item
                android:id="@+id/PaymentCode"
                android:title="@string/PaymentCode" />
            <item
                android:id="@+id/plugin_log"
                android:title="@string/game_log" />
        </menu>
    </item>
</menu>